# muffin

./: .gitignore  Cargo.toml  README.md  flake.nix
muffin/: Cargo.toml
muffin/src/: main.rs
muffin/src/app/: app.rs  driver.rs  events.rs  menus.rs  mod.rs  render.rs
muffin/src/app/menus/: create.rs  delete.rs  mod.rs  presets.rs  rename.rs  sessions.rs  traits.rs  utils.rs
parser/: Cargo.toml
parser/examples/: config.kdl  config.yml
parser/src/: lib.rs
src/: app.rs  main.rs  render.rs  tmux.rs
src/app/: app.rs  render.rs
src/app/events/: keys.rs
tmux-helper/: Cargo.toml
tmux-helper/src/: lib.rs
tmux/src/: lib.rs
