[package]
name = "muffin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
color-eyre = "0.6.5"
futures = "0.3.31"
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] } 
regex = "1.12.2"
tokio = { version = "1.44.0", features = ["full"] }
tui-textarea = "0.7.0"
